--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "expo": "~39.0.2",
+    "expo-cli": "^4.0.8",
     "expo-constants": "^9.2.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
