--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nargarcyz.HoraBus"
     },
     "web": {
       "favicon": "./assets/favicon.png"
