--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
@@ -17,21 +17,21 @@
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
-    "expo": "~39.0.2",
+    "expo": "^40.0.0",
     "expo-cli": "^4.0.8",
-    "expo-constants": "^9.2.0",
-    "expo-status-bar": "~1.0.2",
+    "expo-constants": "~9.3.3",
+    "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
     "react-native-table-component": "^1.2.1",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.0.0"
+    "react-native-webview": "11.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
