--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
-    "expo": "^40.0.0",
+    "expo": "^42.0.0",
     "expo-cli": "^4.0.8",
-    "expo-constants": "~9.3.3",
-    "expo-status-bar": "~1.0.3",
+    "expo-constants": "~11.0.1",
+    "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.2.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-table-component": "^1.2.1",
-    "react-native-web": "~0.13.12",
-    "react-native-webview": "11.0.0"
+    "react-native-web": "^0.17.1",
+    "react-native-webview": "11.6.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
