--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://nargarcyz.github.io/Buschedule-App",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -35,7 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "babel-plugin-inline-dotenv": "^1.6.0"
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "gh-pages": "^3.2.3"
   },
   "private": true
 }
