--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  "homepage": "https://oscargtoledo.github.io/Buschedule-App",
+  "homepage": "https://oscargtoledo.github.io/HoraBus",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -34,6 +34,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-table-component": "^1.2.1",
     "react-native-web": "^0.17.1",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "11.6.2"
   },
   "devDependencies": {
