--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-table-component": "^1.2.1",
     "react-native-web": "^0.17.1",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "11.6.2"
+    "react-native-webview": "11.6.2",
+    "react-promise-tracker": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
