--- a/app.json
+++ b/app.json
@@ -13,16 +13,16 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.nargarcyz.HoraBus"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "preferRelatedApplications": false
     },
+
     "description": "",
     "android": {
       "package": "com.nargarcyz.HoraBus"
