--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -7,7 +8,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "deploy": "gh-pages -d web-build",
-    "predeploy": "expo build:web",
+    "build": "expo build:web",
     "netlify": "netlify deploy",
     "netprod": "netlify deploy --prod"
   },
