--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
+    "web": "expo start:web --https",
+    "testweb": "npx serve web-build",
     "eject": "expo eject",
     "deploy": "gh-pages -d web-build",
     "build": "expo build:web",
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^5.9.3",
-    "@react-navigation/material-bottom-tabs": "^5.2.19",
+    "@react-navigation/material-bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.21.0",
@@ -31,12 +31,14 @@
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-dotenv": "^3.2.0",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-paper": "^4.2.0",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-table-component": "^1.2.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "11.6.2",
