--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
+    "react-native-web-refresh-control": "^1.1.0",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "11.6.2",
     "react-promise-tracker": "^2.1.0",
+    "rn-placeholder": "^3.0.3",
     "workbox-background-sync": "^6.1.5",
     "workbox-broadcast-update": "^6.1.5",
     "workbox-cacheable-response": "^6.1.5",
