--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "netprod": "netlify deploy --prod"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^5.9.3",
