--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^5.9.3",
@@ -25,6 +26,7 @@
     "dotenv": "^10.0.0",
     "expo": "^42.0.0",
     "expo-cli": "^4.0.8",
+    "expo-clipboard": "~1.1.0",
     "expo-constants": "~11.0.1",
     "expo-status-bar": "~1.0.4",
     "netlify-cli": "^6.7.7",
