--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "testweb": "npx serve web-build",
     "eject": "expo eject",
     "deploy": "gh-pages -d web-build",
-    "build": "expo build:web",
+    "build": "expo build:web && copy .\\_redirects .\\web-build",
     "netlify": "netlify deploy",
     "netprod": "netlify deploy --prod"
   },
