--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "eject": "expo eject",
     "deploy": "gh-pages -d web-build",
     "build": "expo build:web && copy .\\_redirects .\\web-build",
-    "netlify": "netlify deploy",
-    "netprod": "netlify deploy --prod"
+    "netlify": "expo build:web && copy .\\_redirects .\\web-build && netlify deploy --dir=web-build",
+    "netprod": "netlify deploy --dir=web-build --prod"
   },
   "dependencies": {
+    "@mdi/js": "^6.1.95",
+    "@mdi/react": "^1.5.0",
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "0.1.10",
@@ -26,6 +28,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^10.0.0",
     "expo": "^42.0.0",
+    "expo-analytics": "^1.0.16",
     "expo-cli": "^4.0.8",
     "expo-clipboard": "~1.1.0",
     "expo-constants": "~11.0.1",
@@ -42,7 +45,6 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-table-component": "^1.2.1",
-    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
     "react-native-web-refresh-control": "^1.1.0",
     "react-native-web-webview": "^1.0.2",
@@ -67,6 +69,7 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-optional-require": "^0.3.1",
     "gh-pages": "^3.2.3"
   },
   "private": true
