Update material bottom tabs

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^5.9.3",
-    "@react-navigation/material-bottom-tabs": "^6.0.5",
+    "@react-navigation/material-bottom-tabs": "^6.2.7",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.21.0",
@@ -40,12 +40,13 @@
     "react-native-dotenv": "^3.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-paper": "^4.9.2",
+    "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-table-component": "^1.2.1",
     "react-native-text-ticker": "^1.14.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.17.1",
     "react-native-web-refresh-control": "^1.1.0",
     "react-native-web-webview": "^1.0.2",
