--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "workbox-webpack-plugin": "^6.1.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
     "@babel/core": "~7.9.0",
+    "@babel/preset-env": "^7.20.2",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-optional-require": "^0.3.1",
     "gh-pages": "^3.2.3"
