--- a/package.json
+++ b/package.json
@@ -14,67 +14,67 @@
     "netprod": "netlify deploy --dir=web-build --prod"
   },
   "dependencies": {
-    "@mdi/js": "^6.1.95",
-    "@mdi/react": "^1.5.0",
-    "@react-native-async-storage/async-storage": "^1.15.7",
+    "@mdi/js": "^7.0.96",
+    "@mdi/react": "^1.6.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/drawer": "^5.9.3",
+    "@react-navigation/bottom-tabs": "^6.4.3",
+    "@react-navigation/drawer": "^6.5.3",
     "@react-navigation/material-bottom-tabs": "^6.2.7",
-    "@react-navigation/native": "^5.7.6",
-    "@react-navigation/stack": "^5.9.3",
-    "axios": "^0.21.0",
-    "classnames": "^2.2.6",
-    "dotenv": "^10.0.0",
-    "expo": "^42.0.0",
-    "expo-analytics": "^1.0.16",
-    "expo-cli": "^4.0.8",
-    "expo-clipboard": "~1.1.0",
-    "expo-constants": "~11.0.1",
-    "expo-status-bar": "~1.0.4",
-    "netlify-cli": "^6.7.7",
-    "react": "16.13.1",
-    "react-dom": "^17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-dotenv": "^3.2.0",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/stack": "^6.3.7",
+    "axios": "^1.2.1",
+    "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
+    "expo": "^47.0.8",
+    "expo-analytics": "^1.0.18",
+    "expo-cli": "^6.0.8",
+    "expo-clipboard": "~4.0.1",
+    "expo-constants": "~14.0.2",
+    "expo-status-bar": "~1.4.2",
+    "netlify-cli": "^12.2.9",
+    "react": "18.1.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.70.6",
+    "react-native-dotenv": "^3.4.2",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-paper": "^4.12.5",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-table-component": "^1.2.1",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^5.0.0",
+    "react-native-reanimated": "~2.13.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.2",
+    "react-native-table-component": "^1.2.2",
     "react-native-text-ticker": "^1.14.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.17.1",
-    "react-native-web-refresh-control": "^1.1.0",
+    "react-native-web": "^0.18.10",
+    "react-native-web-refresh-control": "^1.1.1",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "11.6.2",
-    "react-promise-tracker": "^2.1.0",
+    "react-native-webview": "11.25.0",
+    "react-promise-tracker": "^2.1.1",
     "rn-placeholder": "^3.0.3",
-    "webpack-dev-server": "^4.1.1",
-    "workbox-background-sync": "^6.1.5",
-    "workbox-broadcast-update": "^6.1.5",
-    "workbox-cacheable-response": "^6.1.5",
-    "workbox-core": "^6.1.5",
-    "workbox-expiration": "^6.1.5",
-    "workbox-google-analytics": "^6.1.5",
-    "workbox-navigation-preload": "^6.1.5",
-    "workbox-precaching": "^6.1.5",
-    "workbox-range-requests": "^6.1.5",
-    "workbox-routing": "^6.1.5",
-    "workbox-strategies": "^6.1.5",
-    "workbox-streams": "^6.1.5",
-    "workbox-webpack-plugin": "^6.1.5"
+    "webpack-dev-server": "^4.11.1",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
-    "@babel/core": "~7.9.0",
+    "@babel/core": "~7.20.5",
     "@babel/preset-env": "^7.20.2",
-    "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-optional-require": "^0.3.1",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^4.0.0"
   },
   "private": true
 }
