--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "horabus",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "sideEffects": false,
   "scripts": {
@@ -10,50 +12,34 @@
     "eject": "expo eject",
     "deploy": "gh-pages -d web-build",
     "build": "expo build:web && copy .\\_redirects .\\web-build",
-    "netlify": "expo build:web && copy .\\_redirects .\\web-build && netlify deploy --dir=web-build",
+    "netlify": "expo export:web && copy .\\_redirects .\\web-build && netlify deploy --dir=web-build",
     "netprod": "netlify deploy --dir=web-build --prod"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/webpack-config": "^0.17.2",
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^6.4.3",
-    "@react-navigation/drawer": "^6.5.3",
-    "@react-navigation/material-bottom-tabs": "^6.2.7",
-    "@react-navigation/native": "^6.0.16",
-    "@react-navigation/stack": "^6.3.7",
+    "@react-navigation/material-bottom-tabs": "^6.2.8",
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/stack": "^6.3.8",
     "axios": "^1.2.1",
-    "classnames": "^2.3.2",
-    "dotenv": "^16.0.3",
-    "expo": "^47.0.8",
-    "expo-analytics": "^1.0.18",
-    "expo-cli": "^6.0.8",
+    "expo": "~47.0.8",
     "expo-clipboard": "~4.0.1",
-    "expo-constants": "~14.0.2",
+    "expo-constants": "^14.0.2",
     "expo-status-bar": "~1.4.2",
-    "netlify-cli": "^12.2.9",
     "react": "18.1.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.70.6",
-    "react-native-dotenv": "^3.4.2",
-    "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-paper": "^5.0.0",
-    "react-native-reanimated": "~2.13.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-paper": "^5.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.2",
-    "react-native-table-component": "^1.2.2",
+    "react-native-screens": "~3.18.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.10",
+    "react-native-web": "~0.18.9",
     "react-native-web-refresh-control": "^1.1.1",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "11.25.0",
-    "react-promise-tracker": "^2.1.1",
-    "rn-placeholder": "^3.0.3",
-    "webpack-dev-server": "^4.11.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
     "workbox-cacheable-response": "^6.5.4",
@@ -69,12 +55,8 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "~7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "babel-plugin-inline-dotenv": "^1.7.0",
-    "babel-plugin-optional-require": "^0.3.1",
-    "gh-pages": "^4.0.0"
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "private": true
 }
