--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/stack": "^6.3.8",
     "axios": "^1.2.1",
+    "babel-plugin-optional-require": "^0.3.1",
     "expo": "~47.0.8",
     "expo-clipboard": "~4.0.1",
     "expo-constants": "^14.0.2",
@@ -32,6 +33,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.2",
     "react-native-paper": "^5.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
